# RecipeBook_Qt

./: .gitignore  CMakeLists.txt  RecipeBook_Qt_report.docx  category.cpp  category.h  categoryfilter.cpp  categoryfilter.h  datamanager.cpp  datamanager.h  favoritesfilter.cpp  favoritesfilter.h  favouritesmanager.cpp  favouritesmanager.h  ingredient.cpp  ingredient.h  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  recipe.cpp  recipe.h  recipedialog.cpp  recipedialog.h  recipedialog.ui  recipefactory.cpp  recipefactory.h  recipefilter.cpp  recipefilter.h  recipetemplate.cpp  recipetemplate.h  recipetemplatefactory.cpp  recipetemplatefactory.h  timefilter.cpp  timefilter.h  user.cpp  user.h
